Alteração no menu

--- a/Index.html
+++ b/Index.html
@@ -12,11 +12,11 @@
 
         <nav>
             <ul id= "navBar">
-                <li><a href="file:///E:/Projetos_Dot/Exercicio2/Index.html#"class="navBarItem">Inicio</a ></li>
-                <li><a href="https://dnd5e.wikidot.com/spells:bard" target="_blank" class="navBarItem">Magias</a ></li>
-                <li><a href="#"class="navBarItem">Localização</a ></li>
-                <li><a href="#"class="navBarItem">Itens</a ></li>
-                <li><a href="#"class="navBarItem">Tipos de criaturas</a ></li>
+                <li><a href="#"class="navBarItem">Inicio Do RPG</a ></li>
+                <li><a href="#" class="navBarItem">Poderzinhos</a ></li>
+                <li><a href="#"class="navBarItem">Mapa Mundi</a ></li>
+                <li><a href="#"class="navBarItem">Trecos</a ></li>
+                <li><a href="#"class="navBarItem">Monstros</a ></li>
             </ul>
         </nav>
     </header>
